<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_tpp_types"
        android:checkableBehavior="single">
        <item
            android:id="@+id/allPSD2"
            android:checked="true"
            android:title="@string/label_all" />
        <item
            android:id="@+id/psd2_tpps"
            android:title="@string/inst_type_psd2_tpps" />
        <item
            android:id="@+id/emoney_inst"
            android:title="@string/inst_type_e_money_institutions" />
        <item
            android:id="@+id/show_branches"
            android:checkable="true"
            android:checked="false"
            android:title="@string/show_agents" />
        <item
            android:id="@+id/show_agents"
            android:checkable="true"
            android:checked="false"
            android:title="@string/show_agents" />
        <item
            android:id="@+id/non_psd2_inst"
            android:title="@string/inst_type_non_psd2_tpps" />
        <item
            android:id="@+id/credit_inst"
            android:enabled="false"
            android:title="@string/inst_type_credit_institutions" />
    </group>

    <group
        android:id="@+id/group_watching"
        android:checkableBehavior="all">
        <item
            android:id="@+id/followed"
            android:checkable="true"
            android:checked="false"
            android:title="@string/nav_followed" />
        <item
            android:id="@+id/used"
            android:checkable="true"
            android:checked="false"
            android:title="@string/nav_used_only" />
    </group>


    <group
        android:id="@+id/group_revokation"
        android:checkableBehavior="all">
        <item
            android:id="@+id/revoked"
            android:checkable="true"
            android:checked="false"
            android:title="@string/label_revoked" />

        <item
            android:id="@+id/revoked_only"
            android:checkable="true"
            android:checked="false"
            android:title="@string/label_revoked_only" />
    </group>
</menu>
