<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.widget.CompoundButton" />

        <variable
            name="viewmodel"
            type="com.applego.oblog.tppwatch.tppdetail.TppDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/details_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="6"
                    android:paddingTop="1dp"
                    android:text="@{viewmodel.tpp.ebaEntity.entityName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorEUDarkBlue"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/follow_used"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:checked="@{viewmodel.followed}"
                        android:gravity="left|center_vertical"
                        android:onClick="@{(view) -> viewmodel.setFollowed(((CompoundButton)view).isChecked())}"
                        android:text="@string/label_following"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496" />

                    <CheckBox
                        android:id="@+id/checkbox_used"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:checked="@{viewmodel.used}"
                        android:gravity="left|center_vertical"
                        android:onClick="@{(view) -> viewmodel.setUsed(((CompoundButton)view).isChecked())}"
                        android:paddingTop="1dp"
                        android:text="@string/label_used"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#006496" />

                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/details_header"
                android:background="?android:attr/listDivider" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/detail_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_header">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/eba_details_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EBA" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/nca_details_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NCA" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/apps_details_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="APPs" />
            </com.google.android.material.tabs.TabLayout>

            <RelativeLayout
                android:id="@+id/detail_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/detail_tabs"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.isDataAvailable ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/label_home_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/label_home_country"
                    android:inputType="none"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:text="@string/label_home_country" />

                <TextView
                    android:id="@+id/entity_home_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/label_home_country"
                    android:layout_toRightOf="@id/label_home_country"
                    android:gravity="left"
                    android:text="@{viewmodel.tpp.ebaEntity.country}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#006496"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_entity_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_home_country"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/label_entity_code" />

                <TextView
                    android:id="@+id/entity_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/entity_home_country"
                    android:layout_alignLeft="@id/entity_home_country"
                    android:paddingTop="1dp"
                    android:text="@{viewmodel.tpp.ebaEntity.entityCode}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#006496"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/entity_code"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/label_passports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider2"
                    android:clickable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="14sp"
                    tools:text="@string/label_passports" />

                <LinearLayout
                    android:id="@+id/visas_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/label_passports"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/visas_labels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <EditText
                            android:id="@+id/label_visa_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/checkbox_follow"
                            android:layout_marginTop="0dp"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="none|textPersonName"
                            android:text="@string/label_country"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/label_visa_psd2_roles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/checkbox_used"
                            android:layout_toRightOf="@id/label_visa_country"
                            android:layout_weight="3"
                            android:clickable="false"
                            android:editable="false"
                            android:enabled="false"
                            android:inputType="textPersonName"
                            android:text="@string/label_roles"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/passports_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/visas_labels"
                        android:layout_marginBottom="10dp"
                        android:fadeScrollbars="false"
                        android:scrollbars="horizontal|vertical"
                        app:items="@{viewmodel.tpp.ebaEntity.ebaPassport.services}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_tpp_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:src="@drawable/ic_edit"
            app:fabSize="mini"
            app:layout_anchorGravity="bottom|right" />-->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
